# sso-service/docs/swagger.json
@@ -1156,6 +1156,20 @@
         }
     },
     "definitions": {
+        "errs.ApiError": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "httpCode": {
+                    "type": "integer"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
         "login_dto.LoginRequestDTO": {
             "type": "object",
             "required": [
@@ -1300,7 +1314,7 @@
             "properties": {
                 "data": {},
                 "error": {
-                    "type": "string"
+                    "$ref": "#/definitions/errs.ApiError"
                 },
                 "message": {
                     "type": "string"
